lib: move addsub functions to utilities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(cppu)
 
 enable_testing()
 
-add_subdirectory(lib/x86-64)
+add_subdirectory(lib/cpu_utils)
 add_subdirectory(lib/kernel)
-
+add_subdirectory(lib/x86-64)
