elf: add ELF library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,6 @@ project(cppu)
 enable_testing()
 
 add_subdirectory(lib/cpu_utils)
+add_subdirectory(lib/elf)
 add_subdirectory(lib/kernel)
 add_subdirectory(lib/x86-64)
