cmake: library name refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(cppu)
 
 enable_testing()
 
-add_subdirectory(lib/cpu_utils)
 add_subdirectory(lib/elf)
 add_subdirectory(lib/kernel)
+add_subdirectory(lib/utils)
 add_subdirectory(lib/x86-64)
