--- a/lib/kernel/CMakeLists.txt
+++ b/lib/kernel/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 
-project(libkernel)
+project(kernel)
 
 add_library(${PROJECT_NAME} STATIC
   inc/vmemory.h
@@ -14,4 +14,8 @@ add_library(${PROJECT_NAME} STATIC
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
 target_include_directories(${PROJECT_NAME}
     PUBLIC inc/
+)
+
+target_link_libraries(${PROJECT_NAME}
+  utils
 )
